Fix word wrapping of especially documentation links in small screens

--- a/src/main/webapp/resources/layout/css/layout.css
+++ b/src/main/webapp/resources/layout/css/layout.css
@@ -162,6 +162,7 @@ code,
 	border-radius: .2em;
 	box-shadow: 0 0 .5em rgba(0,0,0,.1);
 	background-color: #fff;
+	word-break: break-word;
 }
 
 #content pre {
